# 96kbs

./: .gitignore  CMakeLists.txt  README.md
docs/: dxr_data_flow.md  gameplay_knowledge_base.md  procedural_visual_design_system.md
shaders/: dxr_composite.hlsl  dxr_entities.hlsl  fullscreen_vs.hlsl  world_fullscreen.hlsl
src/: win32_main.cpp
src/app/: app.cpp  app.h
src/game/: combat_sim.cpp  combat_sim.h  game_session.cpp  game_session.h  math.h  rng.h  world_gen.cpp  world_gen.h
src/platform/: d3d12_context.cpp  d3d12_context.h
src/render/: dxr_pipeline.cpp  dxr_pipeline.h  dxr_scene_resources.cpp  dxr_scene_resources.h  dxr_shader_table.cpp  dxr_shader_table.h  entity_rt_proxy.cpp  entity_rt_proxy.h  gpu_upload_buffer.cpp  gpu_upload_buffer.h  render_scene.cpp  render_scene.h  visual_style.cpp  visual_style.h
tests/: sim_tests.cpp
tools/: build_msvc_debug.ps1  check_toolchain.ps1  embed_binary.py  size_report.py
